<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".Views.Signup">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp">

        <TextView
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/create_your"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create"
            android:layout_marginStart="30dp"
            android:text="@string/account"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="20dp"
            android:textColorHint="#717171"
            app:boxStrokeColor="@color/orange"
            app:counterTextColor="@color/orange"
            app:cursorColor="@color/orange"
            app:hintTextColor="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_etName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="12dp"
                android:hint="@string/username"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tl1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="#717171"
            app:boxStrokeColor="@color/orange"
            app:counterTextColor="@color/orange"
            app:cursorColor="@color/orange"
            app:hintTextColor="@color/orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="12dp"
                android:hint="@string/emaill"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tl2"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="#717171"
            app:boxStrokeColor="@color/orange"
            app:counterTextColor="@color/orange"
            app:cursorColor="@color/orange"
            app:endIconTint="@color/Gray"
            app:hintTextColor="@color/orange"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_EtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="12dp"
                android:hint="@string/passwordd"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/signupBtnRegister"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/tl3"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="22dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/orange"
            android:text="@string/sign_up_with_firebase"
            android:textColor="@color/white"
            app:cornerRadius="4dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_btnApi"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/signupBtnRegister"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/orange"
            android:text="@string/sign_up_with_api"
            android:textColor="@color/white"
            app:cornerRadius="4dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/signupBtnGoToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_btnApi"
            android:layout_marginTop="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/already_exist_sign_in"
            android:textColor="@color/orange"
            app:cornerRadius="4dp" />

        <ProgressBar
            android:id="@+id/registerProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:visibility="gone"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/Gray" />

    </RelativeLayout>

</LinearLayout>